--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.7.1
 argparse==1.2.1
 django-bootstrap3==4.11.0
 django-debug-toolbar==1.2.2
+django-registration-redux==1.1
 djangorestframework==2.4.3
 pbr==0.10.0
 six==1.8.0
